[BUGFIX]add deletion modal & filter deleted course

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -316,6 +316,8 @@
   "common.ui.create": "Create",
   "common.ui.creatorPageLink": "Creator Page",
   "common.ui.delete": "Delete",
+  "common.ui.deleteProgram": "Delete Course",
+  "common.ui.deleted": "Deleted",
   "common.ui.detail": "Detail",
   "common.ui.edit": "Edit",
   "common.ui.editPassword": "Edit Password",
