--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -143,7 +143,7 @@
   "common.label.invoiceUniformNumber": "Invoice Uniform Number",
   "common.label.invoiceUniformTitle": "Invoice Uniform Title",
   "common.label.isAppOwner": "Administrator",
-  "common.label.languages": "顯示語系",
+  "common.label.languages": "Languages",
   "common.label.lastLogin": "Last Login",
   "common.label.memberLog": "Log",
   "common.label.memberPage": "My Page",
@@ -277,7 +277,7 @@
   "common.term.shortDescription": "Short Description",
   "common.term.speciality": "Speciality",
   "common.term.startedAt": "Start Time",
-  "common.term.supportedLanguages": "選擇顯示於哪個語系",
+  "common.term.supportedLanguages": "Supported Languages",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
@@ -453,6 +453,7 @@
   "program.status.issueOpen": "Open",
   "program.status.issueSolved": "Solved",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
+  "program.text.deletePorgramConfirmation": "Once a course is deleted, it cannot be recovered. Are you sure you want to delete it?",
   "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
   "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
