[FEATURE] add publish button

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -33,7 +33,7 @@
   "activity.term.ticketPlanTitle": "Ticket Plan Title",
   "activity.text.noDescription": "No activity description.",
   "activity.text.noTicketPlan": "No ticket Plan.",
-  "activity.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "activity.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
   "activity.text.publishedNotation": "現在你的活動已經發佈，此活動會出現在頁面上。",
   "activity.text.unpublishedNotation": "因你的活動未發佈，此活動並不會顯示在頁面上。",
   "activity.ui.addTicketPlan": "Add Ticket Plan",
@@ -80,7 +80,7 @@
   "appointment.text.noPeriod": "No period.",
   "appointment.text.noPeriodCreated": "No period.",
   "appointment.text.noTitle": "No plan title.",
-  "appointment.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "appointment.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
   "appointment.text.publishedNotation": "預約方案已經發佈，學生將能購買預約。",
   "appointment.text.selectStartedAt": "start time",
   "appointment.text.timezone": "All the timings listed are in your timezone: {city} (GMT{timezone})",
@@ -239,6 +239,8 @@
   "common.status.orderRefund": "Refund",
   "common.status.orderSuccess": "Success",
   "common.status.orderUnpaid": "Unpaid",
+  "common.status.privatelyPublish": "Published Privately",
+  "common.status.publicyPublish": "Published Publicly",
   "common.status.published": "Published",
   "common.status.unpublished": "Unpublished",
   "common.term.account": "Account",
@@ -338,7 +340,10 @@
   "common.ui.previewContent": "Content",
   "common.ui.previewIntroduction": "Introduction",
   "common.ui.print": "Print",
+  "common.ui.privatelyPublish": "Privately Publish",
+  "common.ui.publiclyPublish": "Publicly Publish ",
   "common.ui.publish": "Publish",
+  "common.ui.publishConfirmation": "Confirm Publish",
   "common.ui.register": "Register",
   "common.ui.registerNow": "Register",
   "common.ui.reply": "Reply",
@@ -404,7 +409,7 @@
   "podcast.text.noDuration": "No duration",
   "podcast.text.noInstructor": "No assigned instructor",
   "podcast.text.noPrice": "No price",
-  "podcast.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "podcast.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
   "podcast.text.podcastCoverTips": "Recommended size: 1080*1080px",
   "podcast.text.publishedNotation": "現在你的廣播已經發佈，此廣播並會出現在頁面上，學生將能購買此廣播。",
   "podcast.text.unpublishedNotation": "因你的廣播未發佈，此廣播並不會顯示在頁面上，學生也不能購買此廣播。",
@@ -452,6 +457,8 @@
   "program.label.unavailableForPastContent": "不可看過去內容",
   "program.status.issueOpen": "Open",
   "program.status.issueSolved": "Solved",
+  "program.text.confirmPrivatelyPublishedNotation": "Courses will not appear on the list, and courses will only be sold as private links.",
+  "program.text.confirmPrivatelyPublishedTitle": "Are you sure you want to make it private?",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deletePorgramConfirmation": "Once a course is deleted, it cannot be recovered. Are you sure you want to delete it?",
   "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
@@ -462,14 +469,16 @@
   "program.text.emptyContentMenu": "初次購買還沒有新的內容喔～",
   "program.text.enrolledPerpetualCount": "Purchased: {count}",
   "program.text.enrolledSubscriptionCount": "Subscribed: {count}",
+  "program.text.isPrivatelyPublishedNotation": "Your course has been published privately. This course will not appear on the page. Students can only access it through the link.",
+  "program.text.isPubliclyPublishedNotation": "Now that your class is publicly available, this class will appear on the page.",
   "program.text.isPublishedNotation": "現在你的課程已經發佈，此課程並會出現在頁面上，學生將能購買此課程。",
-  "program.text.isUnpublishedNotation": "因你的課程未發佈，此課程並不會顯示在頁面上，學生也不能購買此課程。",
+  "program.text.isUnpublishedNotation": "Because your course is not published, it will not appear on the page, and students cannot purchase this course.",
   "program.text.memberWatchOnly": "{name} only",
   "program.text.noPrice": "Missing price",
   "program.text.noProgramAbstract": "Missing abstract",
   "program.text.noProgramContent": "Missing content",
   "program.text.noProgramDescription": "Missing description",
-  "program.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "program.text.notCompleteNotation": "Please fill in the required information below. Fill it out and publish it.",
   "program.text.programContentPlans": "Plan: ",
   "program.text.salePriceNotation": "購買到優惠價的會員，往後每期皆以優惠價收款",
   "program.text.unpublishingTitle": "Unpublish program?",
