--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -239,6 +239,8 @@
   "common.status.orderRefund": "Đã hoàn tiền",
   "common.status.orderSuccess": "Đã hoàn thành",
   "common.status.orderUnpaid": "Đợi thanh toán",
+  "common.status.privatelyPublish": "已私密發佈",
+  "common.status.publicyPublish": "已公開發佈",
   "common.status.published": "Đã đăng tải",
   "common.status.unpublished": "Chưa đăng tải",
   "common.term.account": "Tài khoản",
@@ -338,7 +340,10 @@
   "common.ui.previewContent": "Nội dung xem trước",
   "common.ui.previewIntroduction": "Giới thiệu phần Xem trước",
   "common.ui.print": "In",
+  "common.ui.privatelyPublish": "私密發佈",
+  "common.ui.publiclyPublish": "公開發佈",
   "common.ui.publish": "Đăng bài ngay",
+  "common.ui.publishConfirmation": "確定發佈",
   "common.ui.register": "Đăng ký",
   "common.ui.registerNow": "Đăng ký ngay",
   "common.ui.reply": "Trả lời",
@@ -452,6 +457,8 @@
   "program.label.unavailableForPastContent": "Không thể xem nội dung cũ",
   "program.status.issueOpen": "Đang giải quyết",
   "program.status.issueSolved": "Đã giải quyết",
+  "program.text.confirmPrivatelyPublishedNotation": "課程將不會出現在列表，僅以私下提供連結的方式販售課程。",
+  "program.text.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "program.text.deleteContentWarning": "Bạn xác định phải xóa nội dung này？Hành động này không thể hoàn tác",
   "program.text.deletePorgramConfirmation": "課程一經刪除即不可恢復，確定要刪除嗎？",
   "program.text.deleteProgramDanger": "Lưu ý: Chỉ trong trường hợp không ai mua thì mới hủy khóa học",
@@ -462,6 +469,8 @@
   "program.text.emptyContentMenu": "Vẫn chưa có nội dung mới cho lần mua đầu tiên nhé",
   "program.text.enrolledPerpetualCount": "Đã bán cho {count} người",
   "program.text.enrolledSubscriptionCount": "Đã đăng ký {count} người",
+  "program.text.isPrivatelyPublishedNotation": "你的課程已經私密發佈，此課程不會出現在頁面上，學生僅能透過連結進入瀏覽。",
+  "program.text.isPubliclyPublishedNotation": "現在你的課程已公開發佈，此課程會出現在頁面上。",
   "program.text.isPublishedNotation": "Hiện tại khóa học của bạn đã được đăng tải, nó sẽ xuất hiện trên trang và học viên sẽ có thể mua khóa học này.",
   "program.text.isUnpublishedNotation": "Vì khóa học của bạn chưa được đăng tải, khóa học này sẽ không xuất hiện trên trang và học viên không thể mua khóa học này",
   "program.text.memberWatchOnly": "Chỉ cung cấp cho {name} xem",
