[BUGFIX] fix order status selector logic

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -165,7 +165,7 @@
   "common.label.orderLogMemberName": "Member Name",
   "common.label.orderLogPrice": "Order Price",
   "common.label.orderLogPriceTotal": "Order Total",
-  "common.label.orderLogStatue": "Order Status",
+  "common.label.orderLogStatus": "Order Status",
   "common.label.orderProductAutoRenew": "Auto Renew",
   "common.label.orderProductId": "Product ID",
   "common.label.orderProductName": "Product Name",
@@ -265,6 +265,7 @@
   "common.term.memberName": "Name",
   "common.term.merchandise": "Merchandise",
   "common.term.name": "Name",
+  "common.term.orderStatus": "Order Status",
   "common.term.owner": "Owner",
   "common.term.password": "Password",
   "common.term.periodType": "Period",
@@ -336,6 +337,7 @@
   "common.ui.logout": "Logout",
   "common.ui.memberPageLink": "Member Page",
   "common.ui.or": "or",
+  "common.ui.prevPage": "Back to previous page",
   "common.ui.preview": "Preview",
   "common.ui.previewContent": "Content",
   "common.ui.previewIntroduction": "Introduction",
