--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -165,7 +165,7 @@
   "common.label.orderLogMemberName": "Họ tên hội viên",
   "common.label.orderLogPrice": "Giá đơn hàng",
   "common.label.orderLogPriceTotal": "Tổng tiền đơn hàng",
-  "common.label.orderLogStatue": "Trạng thái đơn hàng",
+  "common.label.orderLogStatus": "訂單狀態",
   "common.label.orderProductAutoRenew": "Tự động tiếp tục đặt đơn",
   "common.label.orderProductId": "Mã sản phẩm",
   "common.label.orderProductName": "Tên sản phẩm",
@@ -265,6 +265,7 @@
   "common.term.memberName": "Họ tên",
   "common.term.merchandise": "Sản phẩm",
   "common.term.name": "Tên",
+  "common.term.orderStatus": "訂單狀態",
   "common.term.owner": "Người lập",
   "common.term.password": "Mật khẩu",
   "common.term.periodType": "Đăng ký chu kỳ",
@@ -336,6 +337,7 @@
   "common.ui.logout": "Đăng xuất",
   "common.ui.memberPageLink": "Trang chủ của học viên",
   "common.ui.or": "Hoặc",
+  "common.ui.prevPage": "返回上頁",
   "common.ui.preview": "Xem trước",
   "common.ui.previewContent": "Nội dung xem trước",
   "common.ui.previewIntroduction": "Giới thiệu phần Xem trước",
