[BUGFIX] upload white picture when create podcast

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -102,6 +102,7 @@
   "common.event.successfullyDeleted": "Deleted",
   "common.event.successfullySaved": "Saved",
   "common.event.successfullyUpdatePassword": "Password Updated",
+  "common.event.successfullyUpload": "Uploaded",
   "common.isContentCreator": "Instructor",
   "common.label.accountData": "Account",
   "common.label.adminBackstage": "Admin Backstage",
