[FEATURE] add blog page

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -95,6 +95,11 @@
   "appointment.ui.open": "Open",
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
+  "blog.label.postContent": "Article content",
+  "blog.label.postManagement": "Article management",
+  "blog.term.pasteVideoUrl": "Paste video URL",
+  "blog.ui.description": "Description",
+  "blog.ui.video": "Video",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
   "common.event.publishingFailed": "Publishing Failed",
@@ -207,6 +212,8 @@
   "common.menu.appointmentAdmin": "Appointment",
   "common.menu.appointmentPlans": "Appointment Plans",
   "common.menu.appointments": "Appointments",
+  "common.menu.blogAdmin": "媒體文章",
+  "common.menu.blogPosts": "文章管理",
   "common.menu.categories": "Categories",
   "common.menu.couponPlans": "Coupon Plans",
   "common.menu.creatorSettings": "Creator Settings",
