--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -95,6 +95,11 @@
   "appointment.ui.open": "Mở",
   "appointment.ui.single": "Một lần",
   "appointment.warning.repetitiveMeta": "※Lặp lại chu kỳ",
+  "blog.label.postContent": "文章內容",
+  "blog.label.postManagement": "文章管理",
+  "blog.term.pasteVideoUrl": "貼上影片網址",
+  "blog.ui.description": "圖文內容",
+  "blog.ui.video": "影片內容",
   "common.event.loading": "Đang tải",
   "common.event.publishedSuccessfully": "Đăng bài thành công",
   "common.event.publishingFailed": "Đăng bài thất bại",
@@ -207,6 +212,8 @@
   "common.menu.appointmentAdmin": "Đặt hẹn dịch vụ",
   "common.menu.appointmentPlans": "kế hoạch đặt ",
   "common.menu.appointments": "Lịch sử đặt hẹn",
+  "common.menu.blogAdmin": "媒體文章",
+  "common.menu.blogPosts": "文章管理",
   "common.menu.categories": "Cài đặt phân loại",
   "common.menu.couponPlans": "Kế hoạch giảm giá",
   "common.menu.creatorSettings": "Cài đặt Creator",
