[FEATURE] blog post setting admin pane

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -95,10 +95,15 @@
   "appointment.ui.open": "Open",
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
+  "blog.label.codeName": "網址代稱",
+  "blog.label.deletePost": "Delete Article",
   "blog.label.postContent": "Article content",
-  "blog.label.postManagement": "Article management",
+  "blog.label.postManagement": "Article Management",
   "blog.term.pasteVideoUrl": "Paste video URL",
+  "blog.text.deletePostConfirmation": "Articles cannot be recovered once deleted. Are you sure you want to delete them?",
+  "blog.text.url": "The last part of the complete URL, usually composed of lowercase English letters, numbers or hyphens",
   "blog.ui.description": "Description",
+  "blog.ui.postSetting": "Article Settings",
   "blog.ui.video": "Video",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
@@ -212,8 +217,8 @@
   "common.menu.appointmentAdmin": "Appointment",
   "common.menu.appointmentPlans": "Appointment Plans",
   "common.menu.appointments": "Appointments",
-  "common.menu.blogAdmin": "媒體文章",
-  "common.menu.blogPosts": "文章管理",
+  "common.menu.blogAdmin": "Media Articles",
+  "common.menu.blogPosts": "Article Management",
   "common.menu.categories": "Categories",
   "common.menu.couponPlans": "Coupon Plans",
   "common.menu.creatorSettings": "Creator Settings",
@@ -289,6 +294,7 @@
   "common.term.speciality": "Speciality",
   "common.term.startedAt": "Start Time",
   "common.term.supportedLanguages": "Supported Languages",
+  "common.term.tag": "Tag",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
@@ -301,6 +307,7 @@
   "common.text.emptyNotification": "No notification now",
   "common.text.enterRegisteredEmail": "Fill in your registered email",
   "common.text.forgotPassword": "Forgot password?",
+  "common.text.locale": "It will only be displayed when the front desk is the designated language family.",
   "common.text.minutes": "{minutes} minutes",
   "common.text.noAssignedInstructor": "No assigned instructor.",
   "common.text.purchasedAt": "{name} purchased at {date}",
@@ -327,6 +334,7 @@
   "common.ui.create": "Create",
   "common.ui.creatorPageLink": "Creator Page",
   "common.ui.delete": "Delete",
+  "common.ui.deletePost": "Delete Article",
   "common.ui.deleteProgram": "Delete Course",
   "common.ui.deleted": "Deleted",
   "common.ui.detail": "Detail",
@@ -471,6 +479,7 @@
   "program.text.confirmPrivatelyPublishedTitle": "Are you sure you want to make it private?",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
   "program.text.deletePorgramConfirmation": "Once a course is deleted, it cannot be recovered. Are you sure you want to delete it?",
+  "program.text.deletePostWarning": "Please double check if you really want to delete, because once you delete, you can't recover it.",
   "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
   "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
