--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -95,10 +95,15 @@
   "appointment.ui.open": "Mở",
   "appointment.ui.single": "Một lần",
   "appointment.warning.repetitiveMeta": "※Lặp lại chu kỳ",
+  "blog.label.codeName": "網址代稱",
+  "blog.label.deletePost": "刪除文章",
   "blog.label.postContent": "文章內容",
   "blog.label.postManagement": "文章管理",
   "blog.term.pasteVideoUrl": "貼上影片網址",
+  "blog.text.deletePostConfirmation": "文章一經刪除即不可恢復，確定要刪除嗎？",
+  "blog.text.url": "完整網址的最後部分，通常是因由小寫英文字母、數字或連字號組成",
   "blog.ui.description": "圖文內容",
+  "blog.ui.postSetting": "文章設定",
   "blog.ui.video": "影片內容",
   "common.event.loading": "Đang tải",
   "common.event.publishedSuccessfully": "Đăng bài thành công",
@@ -289,6 +294,7 @@
   "common.term.speciality": "Sở trường",
   "common.term.startedAt": "Thời gian bắt đầu",
   "common.term.supportedLanguages": "選擇顯示於哪個語系",
+  "common.term.tag": "標籤",
   "common.term.teachingAssistant": "Trợ giảng",
   "common.term.title": "Tên",
   "common.term.unknownProduct": "Phân loại chưa biết",
@@ -301,6 +307,7 @@
   "common.text.emptyNotification": "Hiện tại không nhận được bất ký thông báo nào",
   "common.text.enterRegisteredEmail": "Nhập email đã đăng ký",
   "common.text.forgotPassword": "Quên mật khẩu？",
+  "common.text.locale": "當前台為指定語系時才會顯示，若不選擇全語系皆顯示",
   "common.text.minutes": "{minutes} phút",
   "common.text.noAssignedInstructor": "Chưa chỉ định giảng viên",
   "common.text.purchasedAt": "{Họ tên} mua vào {Ngày} ",
@@ -327,6 +334,7 @@
   "common.ui.create": "Lập",
   "common.ui.creatorPageLink": "Trang chủ của người sáng tạo",
   "common.ui.delete": "Xóa",
+  "common.ui.deletePost": "刪除文章",
   "common.ui.deleteProgram": "刪除課程",
   "common.ui.deleted": "已刪除",
   "common.ui.detail": "Chi tiết",
@@ -471,6 +479,7 @@
   "program.text.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "program.text.deleteContentWarning": "Bạn xác định phải xóa nội dung này？Hành động này không thể hoàn tác",
   "program.text.deletePorgramConfirmation": "課程一經刪除即不可恢復，確定要刪除嗎？",
+  "program.text.deletePostWarning": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
   "program.text.deleteProgramDanger": "Lưu ý: Chỉ trong trường hợp không ai mua thì mới hủy khóa học",
   "program.text.deleteProgramWarning": "Vui lòng xác nhận cần xóa khóa học, vì đã xóa thì không thể hoàn tác.",
   "program.text.deleteSectionWarning": "Nội dung tại khối này sẽ bị xóa, hành động này không thể hoàn tác",
