[FEATURE] remove blog pane

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -260,6 +260,7 @@
   "common.term.activityTicket": "Activity Ticket",
   "common.term.anonymous": "Anonymous",
   "common.term.appOwner": "App Owner",
+  "common.term.authro": "Author",
   "common.term.avatar": "Avatar",
   "common.term.card": "Membership Card",
   "common.term.category": "Category",
