--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -260,6 +260,7 @@
   "common.term.activityTicket": "Vé sự kiện",
   "common.term.anonymous": "Người sử dụng nặc danh",
   "common.term.appOwner": "Quản trị viên",
+  "common.term.authro": "Tác giả",
   "common.term.avatar": "Avatar",
   "common.term.card": "Thẻ thành viên",
   "common.term.category": "Phân loại",
