[FEATURE] blog post basic form

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -190,6 +190,7 @@
   "common.label.perYear": "per year",
   "common.label.phone": "Phone",
   "common.label.points": "{points} points",
+  "common.label.price": "Price",
   "common.label.profileAdminTitle": "Profile",
   "common.label.profileBasic": "Basic",
   "common.label.programProgress": "Total Learning Statistics",
@@ -223,6 +224,10 @@
   "common.menu.couponPlans": "Coupon Plans",
   "common.menu.creatorSettings": "Creator Settings",
   "common.menu.members": "Members",
+  "common.menu.merchandise": "商品",
+  "common.menu.merchandiseIssues": "問答管理",
+  "common.menu.merchandiseShipping": "出貨管理",
+  "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Owner Settings",
   "common.menu.podcastAdmin": "Podcast",
   "common.menu.podcastPlans": "Podcast Plans",
@@ -296,6 +301,7 @@
   "common.term.startedAt": "Start Time",
   "common.term.supportedLanguages": "Supported Languages",
   "common.term.tag": "Tag",
+  "common.term.tags": "標籤",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
@@ -376,6 +382,7 @@
   "creator.label.creatorPodcast": "Podcast Program",
   "creator.label.creatorPrograms": "Program",
   "error.data.fetch": "Loading Failed",
+  "error.event.checkSameCodeName": "Code name is already used",
   "error.event.checkSamePassword": "Confirmed password is not match to new password",
   "error.event.failedFacebookLogin": "login/register failed from Facebook",
   "error.event.failedGoogleLogin": "login/register failed from Google",
@@ -401,6 +408,31 @@
   "membershipCard.label.endedAt": "end at {date}",
   "membershipCard.label.noLimit": "Forever",
   "membershipCard.label.selectMembershipCard": "Select Membership Card",
+  "merchandise.label.abstract": "規格說明",
+  "merchandise.label.basicSettings": "基本設定",
+  "merchandise.label.delete": "刪除商品",
+  "merchandise.label.description": "商品詳情",
+  "merchandise.label.images": "商品圖片",
+  "merchandise.label.introduction": "商品介紹",
+  "merchandise.label.paymentLink": "付款連結",
+  "merchandise.label.price": "商品售價",
+  "merchandise.label.publishAdmin": "上架設定",
+  "merchandise.label.salesAdmin": "銷售設定",
+  "merchandise.label.settings": "商品資訊",
+  "merchandise.status.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "merchandise.status.publishedNotation": "現在你的商品已發佈，此商品會出現在頁面上。",
+  "merchandise.status.selling": "販賣中",
+  "merchandise.status.soldOut": "已售完",
+  "merchandise.status.unpublished": "未上架",
+  "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
+  "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
+  "merchandise.text.noAbstract": "尚未填寫規格",
+  "merchandise.text.noLink": "尚未設定付款連結",
+  "merchandise.text.noPrice": "尚未設定售價",
+  "merchandise.text.noTitle": "尚未填寫名稱",
+  "merchandise.text.searchMerchandise": "搜尋商品名稱",
+  "merchandise.ui.createMerchandise": "建立商品",
+  "merchandise.ui.deleteMerchandise": "刪除商品",
   "notification.term.notification": "Notification",
   "notification.ui.checkNotifications": "read more",
   "notification.ui.markAllAsRead": "Mark all as read",
