--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -190,6 +190,7 @@
   "common.label.perYear": "Mỗi năm",
   "common.label.phone": "手機",
   "common.label.points": "{points} Điểm",
+  "common.label.price": "價格",
   "common.label.profileAdminTitle": "Thông tin tài khoản",
   "common.label.profileBasic": "Thông tin cơ bản",
   "common.label.programProgress": "Tiến độ học tập tổng thể",
@@ -223,6 +224,10 @@
   "common.menu.couponPlans": "Kế hoạch giảm giá",
   "common.menu.creatorSettings": "Cài đặt Creator",
   "common.menu.members": "Quản lý hội viên",
+  "common.menu.merchandise": "商品",
+  "common.menu.merchandiseIssues": "問答管理",
+  "common.menu.merchandiseShipping": "出貨管理",
+  "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Cài đặt quản trị viên",
   "common.menu.podcastAdmin": "Podcast",
   "common.menu.podcastPlans": "Đăng kýKế hoạch",
@@ -296,6 +301,7 @@
   "common.term.startedAt": "Thời gian bắt đầu",
   "common.term.supportedLanguages": "選擇顯示於哪個語系",
   "common.term.tag": "標籤",
+  "common.term.tags": "標籤",
   "common.term.teachingAssistant": "Trợ giảng",
   "common.term.title": "Tên",
   "common.term.unknownProduct": "Phân loại chưa biết",
@@ -376,6 +382,7 @@
   "creator.label.creatorPodcast": "Podcast",
   "creator.label.creatorPrograms": "Mở khóa học",
   "error.data.fetch": "Bị lỗi",
+  "error.event.checkSameCodeName": "網址代碼已被使用",
   "error.event.checkSamePassword": "Vui lòng xác nhận mật khẩu giống với mật khẩu mới",
   "error.event.failedFacebookLogin": "Không thể đăng nhập/ đăng ký từ Facebook",
   "error.event.failedGoogleLogin": "Không thể đăng nhập/ đăng ký từ Goolge",
@@ -401,6 +408,31 @@
   "membershipCard.label.endedAt": "{date}kết thúc ",
   "membershipCard.label.noLimit": "Không có thời hạn sử dụng",
   "membershipCard.label.selectMembershipCard": "Chọn thẻ hội viên",
+  "merchandise.label.abstract": "規格說明",
+  "merchandise.label.basicSettings": "基本設定",
+  "merchandise.label.delete": "刪除商品",
+  "merchandise.label.description": "商品詳情",
+  "merchandise.label.images": "商品圖片",
+  "merchandise.label.introduction": "商品介紹",
+  "merchandise.label.paymentLink": "付款連結",
+  "merchandise.label.price": "商品售價",
+  "merchandise.label.publishAdmin": "上架設定",
+  "merchandise.label.salesAdmin": "銷售設定",
+  "merchandise.label.settings": "商品資訊",
+  "merchandise.status.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "merchandise.status.publishedNotation": "現在你的商品已發佈，此商品會出現在頁面上。",
+  "merchandise.status.selling": "販賣中",
+  "merchandise.status.soldOut": "已售完",
+  "merchandise.status.unpublished": "未上架",
+  "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
+  "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
+  "merchandise.text.noAbstract": "尚未填寫規格",
+  "merchandise.text.noLink": "尚未設定付款連結",
+  "merchandise.text.noPrice": "尚未設定售價",
+  "merchandise.text.noTitle": "尚未填寫名稱",
+  "merchandise.text.searchMerchandise": "搜尋商品名稱",
+  "merchandise.ui.createMerchandise": "建立商品",
+  "merchandise.ui.deleteMerchandise": "刪除商品",
   "notification.term.notification": "Thông báo",
   "notification.ui.checkNotifications": "Xem thông báo",
   "notification.ui.markAllAsRead": "Tất cả đánh dấu là đã đọc",
