[FEATURE] blog post setting form

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -97,10 +97,12 @@
   "appointment.warning.repetitiveMeta": "※ repeat period ",
   "blog.label.codeName": "網址代稱",
   "blog.label.deletePost": "Delete Article",
+  "blog.label.merchandises": "Related Products",
   "blog.label.postContent": "Article content",
   "blog.label.postManagement": "Article Management",
   "blog.term.pasteVideoUrl": "Paste video URL",
   "blog.text.deletePostConfirmation": "Articles cannot be recovered once deleted. Are you sure you want to delete them?",
+  "blog.text.suggestedPictureSize": "Suggested picture size: 1200 * 675px",
   "blog.text.url": "The last part of the complete URL, usually composed of lowercase English letters, numbers or hyphens",
   "blog.ui.description": "Description",
   "blog.ui.postSetting": "Article Settings",
