--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -97,10 +97,12 @@
   "appointment.warning.repetitiveMeta": "※Lặp lại chu kỳ",
   "blog.label.codeName": "網址代稱",
   "blog.label.deletePost": "刪除文章",
+  "blog.label.merchandises": "相關商品",
   "blog.label.postContent": "文章內容",
   "blog.label.postManagement": "文章管理",
   "blog.term.pasteVideoUrl": "貼上影片網址",
   "blog.text.deletePostConfirmation": "文章一經刪除即不可恢復，確定要刪除嗎？",
+  "blog.text.suggestedPictureSize": "建議圖片尺寸：1200*675px",
   "blog.text.url": "完整網址的最後部分，通常是因由小寫英文字母、數字或連字號組成",
   "blog.ui.description": "圖文內容",
   "blog.ui.postSetting": "文章設定",
