[FEATURE] add video loading state

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -102,8 +102,11 @@
   "blog.label.postManagement": "Article Management",
   "blog.term.pasteVideoUrl": "Paste video URL",
   "blog.text.deletePostConfirmation": "Articles cannot be recovered once deleted. Are you sure you want to delete them?",
+  "blog.text.noVideoFound": "No videos found",
   "blog.text.suggestedPictureSize": "Suggested picture size: 1200 * 675px",
+  "blog.text.uploading": "Uploading",
   "blog.text.url": "The last part of the complete URL, usually composed of lowercase English letters, numbers or hyphens",
+  "blog.ui.createPost": "Create Post",
   "blog.ui.description": "Description",
   "blog.ui.postSetting": "Article Settings",
   "blog.ui.video": "Video",
