[FEATURE] product category selector

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -110,6 +110,7 @@
   "blog.ui.description": "Description",
   "blog.ui.postSetting": "Article Settings",
   "blog.ui.video": "Video",
+  "command.label.uploading": "Uploading",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
   "common.event.publishingFailed": "Publishing Failed",
@@ -220,24 +221,29 @@
   "common.label.zoomBinding": "Connect to Zoom",
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
+  "common.menu.activityCategory": "Categories",
   "common.menu.appointmentAdmin": "Appointment",
   "common.menu.appointmentPlans": "Appointment Plans",
   "common.menu.appointments": "Appointments",
   "common.menu.blogAdmin": "Media Articles",
+  "common.menu.blogCategory": "Categories",
   "common.menu.blogPosts": "Article Management",
   "common.menu.categories": "Categories",
   "common.menu.couponPlans": "Coupon Plans",
   "common.menu.creatorSettings": "Creator Settings",
   "common.menu.members": "Members",
   "common.menu.merchandise": "商品",
+  "common.menu.merchandiseCategory": "Categories",
   "common.menu.merchandiseIssues": "問答管理",
   "common.menu.merchandiseShipping": "出貨管理",
   "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Owner Settings",
   "common.menu.podcastAdmin": "Podcast",
+  "common.menu.podcastCategory": "Categories",
   "common.menu.podcastPlans": "Podcast Plans",
   "common.menu.podcastPrograms": "Podcast Programs",
   "common.menu.programAdmin": "Program",
+  "common.menu.programCategory": "Categories",
   "common.menu.programIssues": "Program Issues",
   "common.menu.programProgress": "Learning Statistics",
   "common.menu.programs": "Programs",
@@ -270,7 +276,7 @@
   "common.term.activityTicket": "Activity Ticket",
   "common.term.anonymous": "Anonymous",
   "common.term.appOwner": "App Owner",
-  "common.term.authro": "Author",
+  "common.term.author": "作者",
   "common.term.avatar": "Avatar",
   "common.term.card": "Membership Card",
   "common.term.category": "Category",
@@ -415,6 +421,7 @@
   "membershipCard.label.selectMembershipCard": "Select Membership Card",
   "merchandise.label.abstract": "規格說明",
   "merchandise.label.basicSettings": "基本設定",
+  "merchandise.label.cover": "封面圖片",
   "merchandise.label.delete": "刪除商品",
   "merchandise.label.description": "商品詳情",
   "merchandise.label.images": "商品圖片",
@@ -431,11 +438,15 @@
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
+  "merchandise.text.deleteImage": "刪除圖片",
+  "merchandise.text.deleteWarning": "一經刪除即不可恢復，確定要刪除嗎？",
+  "merchandise.text.imageTips": "建議圖片尺寸：600*600px 以上",
   "merchandise.text.noAbstract": "尚未填寫規格",
   "merchandise.text.noLink": "尚未設定付款連結",
   "merchandise.text.noPrice": "尚未設定售價",
   "merchandise.text.noTitle": "尚未填寫名稱",
   "merchandise.text.searchMerchandise": "搜尋商品名稱",
+  "merchandise.text.setCover": "設為封面",
   "merchandise.ui.createMerchandise": "建立商品",
   "merchandise.ui.deleteMerchandise": "刪除商品",
   "notification.term.notification": "Notification",
@@ -516,8 +527,8 @@
   "program.text.confirmPrivatelyPublishedNotation": "Courses will not appear on the list, and courses will only be sold as private links.",
   "program.text.confirmPrivatelyPublishedTitle": "Are you sure you want to make it private?",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
-  "program.text.deletePorgramConfirmation": "Once a course is deleted, it cannot be recovered. Are you sure you want to delete it?",
   "program.text.deletePostWarning": "Please double check if you really want to delete, because once you delete, you can't recover it.",
+  "program.text.deleteProgramConfirmation": "課程一經刪除即不可恢復，確定要刪除嗎？",
   "program.text.deleteProgramDanger": "注意：只有在無人購買的情況下才能刪除課程。",
   "program.text.deleteProgramWarning": "請仔細確認是否真的要刪除課程，因為一旦刪除就無法恢復。",
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
