--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -110,6 +110,7 @@
   "blog.ui.description": "圖文內容",
   "blog.ui.postSetting": "文章設定",
   "blog.ui.video": "影片內容",
+  "command.label.uploading": "上傳中",
   "common.event.loading": "Đang tải",
   "common.event.publishedSuccessfully": "Đăng bài thành công",
   "common.event.publishingFailed": "Đăng bài thất bại",
@@ -220,24 +221,29 @@
   "common.label.zoomBinding": "Ràng buộc ",
   "common.menu.activities": "Quản lý sự kiện offline",
   "common.menu.activityAdmin": "Sự kiện offline",
+  "common.menu.activityCategory": "線下實體分類",
   "common.menu.appointmentAdmin": "Đặt hẹn dịch vụ",
   "common.menu.appointmentPlans": "kế hoạch đặt ",
   "common.menu.appointments": "Lịch sử đặt hẹn",
   "common.menu.blogAdmin": "媒體文章",
+  "common.menu.blogCategory": "文章分類",
   "common.menu.blogPosts": "文章管理",
   "common.menu.categories": "Cài đặt phân loại",
   "common.menu.couponPlans": "Kế hoạch giảm giá",
   "common.menu.creatorSettings": "Cài đặt Creator",
   "common.menu.members": "Quản lý hội viên",
   "common.menu.merchandise": "商品",
+  "common.menu.merchandiseCategory": "商品分類",
   "common.menu.merchandiseIssues": "問答管理",
   "common.menu.merchandiseShipping": "出貨管理",
   "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Cài đặt quản trị viên",
   "common.menu.podcastAdmin": "Podcast",
+  "common.menu.podcastCategory": "廣播分類",
   "common.menu.podcastPlans": "Đăng kýKế hoạch",
   "common.menu.podcastPrograms": "Quản lý ",
   "common.menu.programAdmin": "Khóa học online",
+  "common.menu.programCategory": "課程分類",
   "common.menu.programIssues": "Vấn đề khóa học",
   "common.menu.programProgress": "Tiến độ học tập",
   "common.menu.programs": "Quản lý khóa học",
@@ -270,7 +276,7 @@
   "common.term.activityTicket": "Vé sự kiện",
   "common.term.anonymous": "Người sử dụng nặc danh",
   "common.term.appOwner": "Quản trị viên",
-  "common.term.authro": "Tác giả",
+  "common.term.author": "作者",
   "common.term.avatar": "Avatar",
   "common.term.card": "Thẻ thành viên",
   "common.term.category": "Phân loại",
@@ -415,6 +421,7 @@
   "membershipCard.label.selectMembershipCard": "Chọn thẻ hội viên",
   "merchandise.label.abstract": "規格說明",
   "merchandise.label.basicSettings": "基本設定",
+  "merchandise.label.cover": "封面圖片",
   "merchandise.label.delete": "刪除商品",
   "merchandise.label.description": "商品詳情",
   "merchandise.label.images": "商品圖片",
@@ -431,11 +438,15 @@
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
+  "merchandise.text.deleteImage": "刪除圖片",
+  "merchandise.text.deleteWarning": "一經刪除即不可恢復，確定要刪除嗎？",
+  "merchandise.text.imageTips": "建議圖片尺寸：600*600px 以上",
   "merchandise.text.noAbstract": "尚未填寫規格",
   "merchandise.text.noLink": "尚未設定付款連結",
   "merchandise.text.noPrice": "尚未設定售價",
   "merchandise.text.noTitle": "尚未填寫名稱",
   "merchandise.text.searchMerchandise": "搜尋商品名稱",
+  "merchandise.text.setCover": "設為封面",
   "merchandise.ui.createMerchandise": "建立商品",
   "merchandise.ui.deleteMerchandise": "刪除商品",
   "notification.term.notification": "Thông báo",
@@ -516,8 +527,8 @@
   "program.text.confirmPrivatelyPublishedNotation": "課程將不會出現在列表，僅以私下提供連結的方式販售課程。",
   "program.text.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "program.text.deleteContentWarning": "Bạn xác định phải xóa nội dung này？Hành động này không thể hoàn tác",
-  "program.text.deletePorgramConfirmation": "課程一經刪除即不可恢復，確定要刪除嗎？",
   "program.text.deletePostWarning": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
+  "program.text.deleteProgramConfirmation": "課程一經刪除即不可恢復，確定要刪除嗎？",
   "program.text.deleteProgramDanger": "Lưu ý: Chỉ trong trường hợp không ai mua thì mới hủy khóa học",
   "program.text.deleteProgramWarning": "Vui lòng xác nhận cần xóa khóa học, vì đã xóa thì không thể hoàn tác.",
   "program.text.deleteSectionWarning": "Nội dung tại khối này sẽ bị xóa, hành động này không thể hoàn tác",
