[FEATURE]add program-package-collection-admin-page

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -246,6 +246,7 @@
   "common.menu.programAdmin": "Program",
   "common.menu.programCategory": "Categories",
   "common.menu.programIssues": "Program Issues",
+  "common.menu.programPackage": "課程組合管理",
   "common.menu.programProgress": "Learning Statistics",
   "common.menu.programs": "Programs",
   "common.menu.promotionAdmin": "Promotion",
@@ -507,6 +508,7 @@
   "program.label.duration": "Duration (minutes)",
   "program.label.introductionVideo": "Introduction Video",
   "program.label.markIssueAs": "Mark as {status}",
+  "program.label.notifyUpdate": "通知內容更新",
   "program.label.permissionType": "選擇內容觀看權限",
   "program.label.perpetualPlanType": "Perpetual Plan",
   "program.label.planDescription": "Plan Description",
@@ -571,6 +573,7 @@
   "program.ui.sortProgram": "Sort Program",
   "program.ui.uploadCaption": "Upload Caption",
   "program.ui.uploadVideo": "Upload Video",
+  "programPackage.ui.createProgramPackage": "建立課程組合",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
