--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -246,6 +246,7 @@
   "common.menu.programAdmin": "Khóa học online",
   "common.menu.programCategory": "課程分類",
   "common.menu.programIssues": "Vấn đề khóa học",
+  "common.menu.programPackage": "課程組合管理",
   "common.menu.programProgress": "Tiến độ học tập",
   "common.menu.programs": "Quản lý khóa học",
   "common.menu.promotionAdmin": "Quản lý chương trình khuyến mãi",
@@ -507,6 +508,7 @@
   "program.label.duration": "Thời lượng nội dung (phút)",
   "program.label.introductionVideo": "Giới thiệu video",
   "program.label.markIssueAs": "Đánh dấu là {status}",
+  "program.label.notifyUpdate": "通知內容更新",
   "program.label.permissionType": "Chọn quyền xem nội dung",
   "program.label.perpetualPlanType": "Thanh toán một lận",
   "program.label.planDescription": "Mô tả kế hoạch",
@@ -571,6 +573,7 @@
   "program.ui.sortProgram": "Sắp xếp khóa học",
   "program.ui.uploadCaption": "Đăng tải phụ đề",
   "program.ui.uploadVideo": "Đăng tải video",
+  "programPackage.ui.createProgramPackage": "建立課程組合",
   "promotion.label.availableDateRange": "Thời hạn",
   "promotion.label.constraint": "Nhu cầu tiêu dùng",
   "promotion.label.constraintAmount": "Tiêu dùng đến mức giảm giá  {amount} ",
