--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -573,6 +573,7 @@
   "program.ui.sortProgram": "Sort Program",
   "program.ui.uploadCaption": "Upload Caption",
   "program.ui.uploadVideo": "Upload Video",
+  "programPackage.label.program": "課程項目",
   "programPackage.ui.createProgramPackage": "建立課程組合",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
