--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -573,6 +573,7 @@
   "program.ui.sortProgram": "Sắp xếp khóa học",
   "program.ui.uploadCaption": "Đăng tải phụ đề",
   "program.ui.uploadVideo": "Đăng tải video",
+  "programPackage.label.program": "課程項目",
   "programPackage.ui.createProgramPackage": "建立課程組合",
   "promotion.label.availableDateRange": "Thời hạn",
   "promotion.label.constraint": "Nhu cầu tiêu dùng",
