--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -100,6 +100,9 @@
   "blog.label.merchandises": "Related Products",
   "blog.label.postContent": "Article content",
   "blog.label.postManagement": "Article Management",
+  "blog.status.notCompleteNotation": "你的文章未發佈，此文章並不會顯示在頁面上。",
+  "blog.status.publishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
+  "blog.status.unpublishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
   "blog.term.pasteVideoUrl": "Paste video URL",
   "blog.text.deletePostConfirmation": "Articles cannot be recovered once deleted. Are you sure you want to delete them?",
   "blog.text.noVideoFound": "No videos found",
@@ -576,6 +579,11 @@
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
   "programPackage.label.program": "課程項目",
+  "programPackage.status.notCompleteNotation": "未發佈，此課程組合並不會顯示在頁面上",
+  "programPackage.status.publishedNotation": "現在你的課程組合已發佈，此課程組合會出現在頁面上。",
+  "programPackage.status.unpublishedNotation": "你的課程組合未發佈，此課程組合並不會顯示在頁面上。",
+  "programPackage.text.noProgramPackagePlan": "尚未訂定銷售方案",
+  "programPackage.text.noTitle": "尚未填寫名稱",
   "programPackage.ui.createProgramPackage": "建立課程組合",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
