--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -576,15 +576,25 @@
   "program.ui.sortProgram": "Sắp xếp khóa học",
   "program.ui.uploadCaption": "Đăng tải phụ đề",
   "program.ui.uploadVideo": "Đăng tải video",
+  "programPacakge.ui.connectProgram": "加入課程",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
+  "programPackage.label.isPublished": "是否開賣",
+  "programPackage.label.paymentType": "付費類型",
+  "programPackage.label.perpetual": "單次",
+  "programPackage.label.perpetualPeriod": "觀看期限",
   "programPackage.label.program": "課程項目",
+  "programPackage.lable.subscriptionPeriod": "訂閱週期",
   "programPackage.status.notCompleteNotation": "未發佈，此課程組合並不會顯示在頁面上",
   "programPackage.status.publishedNotation": "現在你的課程組合已發佈，此課程組合會出現在頁面上。",
   "programPackage.status.unpublishedNotation": "你的課程組合未發佈，此課程組合並不會顯示在頁面上。",
   "programPackage.text.noProgramPackagePlan": "尚未訂定銷售方案",
   "programPackage.text.noTitle": "尚未填寫名稱",
+  "programPackage.ui.allowTempoDelivery": "啟用節奏交付",
   "programPackage.ui.createProgramPackage": "建立課程組合",
+  "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
+  "programPackage.ui.subscription": "訂閱",
+  "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
   "promotion.label.availableDateRange": "Thời hạn",
   "promotion.label.constraint": "Nhu cầu tiêu dùng",
   "promotion.label.constraintAmount": "Tiêu dùng đến mức giảm giá  {amount} ",
